--- a/Health4life/Views/Home/Contact.cshtml
+++ b/Health4life/Views/Home/Contact.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
+@section featured {
+    <div class="jumbotron"></div>
+    }
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
