--- a/Health4life/Views/Home/Index.cshtml
+++ b/Health4life/Views/Home/Index.cshtml
@@ -1,45 +1,33 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Health4life";
 }
+ 
 @section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title.</h1>
-                <h2>@ViewBag.Message</h2>
-            </hgroup>
-            <p>
-                To learn more about ASP.NET MVC visit
-                <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
-                The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET MVC.
-                If you have any questions about ASP.NET MVC visit
-                <a href="http://forums.asp.net/1146.aspx/1?MVC" title="ASP.NET MVC Forum">our forums</a>.
-            </p>
-        </div>
-    </section>
+  <div class="jumbotron">
+    <div class="container">
+      <h1>@ViewBag.Title</h1>
+      <h2>@ViewBag.Message</h2>
+      <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+      <a class="btn btn-large btn-success" href="#" title="sign up">sign up</a>
+    </div>
+  </div>
 }
-<h3>We suggest the following:</h3>
-<ol class="round">
-    <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-        enables a clean separation of concerns and that gives you full control over markup
-        for enjoyable, agile development. ASP.NET MVC includes many features that enable
-        fast, TDD-friendly development for creating sophisticated applications that use
-        the latest web standards.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
-    </li>
-
-    <li class="two">
-        <h5>Add NuGet packages and jump-start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Learn more…</a>
-    </li>
-
-    <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features
-        and price for your applications.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
-    </li>
-</ol>
+<!-- Example row of columns -->
+<div class="row">
+  <div class="col-md-4">
+    <h2>@ViewBag.Title</h2>
+   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+      <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
+  </div>
+  <div class="col-md-4">
+    <h2>@ViewBag.Title</h2>
+   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+      <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
+  </div>
+  <div class="col-md-4">
+    <h2>@ViewBag.Title</h2>
+   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+      <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
+  </div>
+</div>
