--- a/Health4life/Views/Shared/_Layout.cshtml
+++ b/Health4life/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+        <title>@ViewBag.Title - Health4Life</title>
         @RenderSection("meta", required: false)
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
