Roundabout on userarea

--- a/Health4life/Views/Home/Contact.cshtml
+++ b/Health4life/Views/Home/Contact.cshtml
@@ -1,29 +1,24 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-@section featured {
-    <div class="jumbotron"></div>
-    }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
-</hgroup>
+<h2>@ViewBag.Title</h2>
+<address>
+    <strong>Electronic Health Solutions.BV (EHS)</strong><br/>
+    Niels Bohrweg 1<br/>
+    Leiden, 2333 CA<br/>
+  <abbr title="Phone">P:</abbr> +31-71-527-7101
+</address>
 
-<section class="contact">
-    <header>
-        <h3>Phone</h3>
-    </header>
-    <p>
-        <span class="label">Main:</span>
-        <span>425.555.0100</span>
-    </p>
-    <p>
-        <span class="label">After Hours:</span>
-        <span>425.555.0199</span>
-    </p>
-</section>
+<address>
+    <strong>Information</strong><br/>
+    <a href="mailto:info@example.com">info@ehs.com</a>
+    
 
+</address>
+
+
+@*
 <section class="contact">
     <header>
         <h3>Email</h3>
@@ -50,4 +45,4 @@
         One Microsoft Way<br />
         Redmond, WA 98052-6399
     </p>
-</section>
+</section>*@
