--- a/Health4life/Views/Shared/_Layout.cshtml
+++ b/Health4life/Views/Shared/_Layout.cshtml
@@ -6,16 +6,18 @@
         @RenderSection("meta", required: false)
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-        <link href="~/Content/themes/default/bootstrap.css" rel="stylesheet">
- 
+        <link href="~/Content/themes/readable/bootstrap.css" rel="stylesheet">
+        <link href="~/Content/health4life.css" rel="stylesheet" />
+
         @Html.Partial("_html5shiv")
- 
+        
         <!-- Fav and touch icons -->
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/Content/ico/apple-touch-icon-144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/Content/ico/apple-touch-icon-114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/Content/ico/apple-touch-icon-72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="~/Content/ico/apple-touch-icon-57-precomposed.png">
         <link href="~/Content/ico/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     </head>
     <body>
         @Html.Partial("_NavBar")
@@ -32,6 +34,9 @@
  
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/bootstrap")
+        
+        @*<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>*@
+        <script src="~/Scripts/jquery.roundabout.js"></script>
         @RenderSection("scripts", required: false)
     </body>
 </html>
