--- a/Health4life/Views/UserArea/Index.cshtml
+++ b/Health4life/Views/UserArea/Index.cshtml
@@ -96,7 +96,10 @@
                                 <h4 class="list-group-item-heading">Activities summary</h4>
                             </div>
                             <a href="#" class="list-group-item">
-                                <h4 class="list-group-item-heading">Walk 5 km</h4>
+                                 <span class="label label-info">GP Advice</span>
+                                <h4 class="list-group-item-heading">
+                                    Walk 5 km
+                                </h4>
                                 <p>Walk 5 km on 25-10-2013</p>
                             </a>
                             <a href="#" class="list-group-item">
@@ -133,12 +136,8 @@
                                 <h4 class="list-group-item-heading">Patient history summary</h4>
                             </div>
                             <a href="#" class="list-group-item">
-                                <h4 class="list-group-item-heading">Walk 5 km</h4>
-                                <p>Walk 5 km on 25-10-2013</p>
-                            </a>
-                            <a href="#" class="list-group-item">
-                                <h4 class="list-group-item-heading">Hide and seek</h4>
-                                <p>Hide from teachers on 30-10-2013</p>
+                                <h4 class="list-group-item-heading">Broken leg</h4>
+                                <p>Fractured femur on 26-10-2013</p>
                             </a>
                         </div>
                     </div>
@@ -150,46 +149,3 @@
         </div>
     </div>
 }
-@*<div class="row">
-    <div class="col-md-6">
-        <div class="well">
-            <h4>Diary</h4>
-            Diary summary
-            <div id="chart_div"></div>
-        </div>
-    </div>
-    <div class="col-md-6">
-         <div class="well">
-            <h4>Activities History</h4>
-            <div class="list-group">
-                <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Activities summary</h4>
-                </div>
-                <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">Walk 5 km</h4>
-                    <p>Walk 5 km on 25-10-2013</p>
-                </a>
-                <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">Hide and seek</h4>
-                    <p>Hide from teachers on 30-10-2013</p>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-6">
-        
-        <div class="well">
-            <h4>Patient History</h4>
-            Patient History summary
-        </div>
-        
-    </div>
-    <div class="col-md-6">
-        <div class="well">
-            <h4>Connect hub</h4>
-            Connect hub summary
-        </div>    
-    </div>
-</div>*@
