Added azure sql and basic pages

--- a/Health4life/Views/Account/Login.cshtml
+++ b/Health4life/Views/Account/Login.cshtml
@@ -22,7 +22,7 @@
         </form>
         
 
-        @*<h2>Use a local account to log in.</h2>
+        <h2>Use a local account to log in.</h2>
         @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true)
@@ -41,7 +41,7 @@
                    </div>
                 <input type="submit" value="Log in" />
             </fieldset>
-        }*@
+        }
     </div>
 </div>
 
