--- a/Health4life/Views/Home/Index.cshtml
+++ b/Health4life/Views/Home/Index.cshtml
@@ -15,19 +15,28 @@
 }
 <!-- Example row of columns -->
 <div class="row">
-  <div class="col-md-4">
-    <h2>@ViewBag.Title</h2>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-      <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
-  </div>
-  <div class="col-md-4">
-    <h2>@ViewBag.Title</h2>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-      <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
-  </div>
-  <div class="col-md-4">
-    <h2>@ViewBag.Title</h2>
-   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-      <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
-  </div>
+    <div class="col-md-4">
+        <h2>@ViewBag.Title</h2>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+        <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
+    </div>
+    
+     <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img data-src="http://lorempixel.com/g/300/200/business/" 
+                alt="300x200" src="http://lorempixel.com/g/300/200/business/" 
+                style="width: 300px; height: 200px;">
+            <div class="caption">
+                <h3>Thumbnail label</h3>
+                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p><a href="#" class="btn btn-primary">Button</a> <a href="#" class="btn btn-default">Button</a></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <h2>@ViewBag.Title</h2>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+        <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
+    </div>
 </div>
