--- a/Health4life/Views/Shared/_Layout.cshtml
+++ b/Health4life/Views/Shared/_Layout.cshtml
@@ -6,11 +6,21 @@
         @RenderSection("meta", required: false)
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-        <link href="~/Content/themes/readable/bootstrap.css" rel="stylesheet">
-        <link href="~/Content/health4life.css" rel="stylesheet" />
-
+        @Styles.Render("~/Content/css")
+        <script type="text/javascript">
+            if (window.location.search.toLowerCase() == '?style=metro') {
+                var e = document.createElement('link');
+                e.href = '/Content/themes/cosmo/bootstrap.css';
+                e.rel = 'stylesheet';
+                document.getElementsByTagName("head")[0].appendChild(e);
+            } else {
+                var e = document.createElement('link');
+                e.href = '/Content/themes/readable/bootstrap.css';
+                e.rel = 'stylesheet';
+                document.getElementsByTagName("head")[0].appendChild(e);
+            }
+        </script>
         @Html.Partial("_html5shiv")
-        
         <!-- Fav and touch icons -->
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="~/Content/ico/apple-touch-icon-144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/Content/ico/apple-touch-icon-114-precomposed.png">
@@ -34,9 +44,6 @@
  
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/bootstrap")
-        
-        @*<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>*@
-        <script src="~/Scripts/jquery.roundabout.js"></script>
         @RenderSection("scripts", required: false)
     </body>
 </html>
