Removed unnecessary code and small content chagnes

--- a/Health4life/Views/Shared/_Layout.cshtml
+++ b/Health4life/Views/Shared/_Layout.cshtml
@@ -38,7 +38,10 @@
             @RenderBody()
             <hr />
             <div class="footer">
-                <p>&copy; Health Solutions.BV</p>
+                <p class="pull-left">&copy; Health Solutions.BV</p>
+                <p class="pull-right">
+                       @Html.ActionLink("Contact", "Contact", "Home")
+                </p>
             </div>
         </div>
  
