--- a/Health4life/Views/Account/Login.cshtml
+++ b/Health4life/Views/Account/Login.cshtml
@@ -4,43 +4,30 @@
     ViewBag.Title = "Log in";
 }
 @section featured {
-    <div class="jumbotron"></div>
+    <div class="jumbotron">
+        <div class="container">
+            <h2>Use your Health4life account to log in.</h2>
+        </div>
+    </div>
     }
 <div class="row">
     <div class="col-md-6">
         
-        <form role="form">
-          <div class="form-group">
-            <label for="UserName">User name</label>
-            <input type="email" class="form-control" id="UserName" placeholder="UserName">
-          </div>
-          <div class="form-group">
-            <label for="Password">Password</label>
-            <input type="password" class="form-control" id="Password" placeholder="Password">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        
-
-        <h2>Use a local account to log in.</h2>
         @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary(true)
 
-            <fieldset>
-                <legend>Log in Form</legend>
+            <div class="form-group">
+                    @Html.LabelFor(m => m.Username)
+                    @Html.TextBoxFor(m => m.Username, new {@class="form-control", placeholder="Username"})
+                    @Html.ValidationMessageFor(m => m.Username)
+            </div>
                 <div class="form-group">
-                        @Html.LabelFor(m => m.UserName)
-                        @Html.TextBoxFor(m => m.UserName)
-                        @Html.ValidationMessageFor(m => m.UserName)
+                    @Html.LabelFor(m => m.Password)
+                    @Html.PasswordFor(m => m.Password, new {@class="form-control", placeholder="Password"})
+                    @Html.ValidationMessageFor(m => m.Password)
                 </div>
-                   <div class="form-group">
-                        @Html.LabelFor(m => m.Password)
-                        @Html.PasswordFor(m => m.Password)
-                        @Html.ValidationMessageFor(m => m.Password)
-                   </div>
-                <input type="submit" value="Log in" />
-            </fieldset>
+            <input type="submit" class="btn btn-default" value="Log in" />
         }
     </div>
 </div>
