--- a/Health4life/Views/Account/Register.cshtml
+++ b/Health4life/Views/Account/Register.cshtml
@@ -16,8 +16,8 @@
         <legend>Registration Form</legend>
         <ol>
             <li>
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
+                @Html.LabelFor(m => m.Username)
+                @Html.TextBoxFor(m => m.Username)
             </li>
             <li>
                 @Html.LabelFor(m => m.Password)
