--- a/Health4life/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Health4life/Views/Account/_ChangePasswordPartial.cshtml
@@ -2,7 +2,37 @@
 
 <h3>Change password</h3>
 
-@using (Html.BeginForm("Manage", "Account")) {
+@using (Html.BeginForm("Manage", "Account",null,FormMethod.Post,new{@class="form-horizontal"})) {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary()
+
+                <fieldset>
+                    <legend>Change Password Form</legend>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.OldPassword,new {@class="col-md-4 control-label"})
+                        <div class="col-md-8">
+                            @Html.PasswordFor(m => m.OldPassword,new{@class="form-control", placeholder="Enter current password"})
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.NewPassword,new {@class="col-md-4 control-label"})
+                        <div class="col-md-8">
+                            @Html.PasswordFor(m => m.NewPassword,new{@class="form-control", placeholder="Enter new password"})
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.ConfirmPassword,new {@class="col-md-4 control-label"})
+                        <div class="col-md-8">
+                            @Html.PasswordFor(m => m.ConfirmPassword,new{@class="form-control", placeholder="Repeat new password"})
+                        </div>
+                    </div>
+                    
+                    <input type="submit" value="Change password" />
+                </fieldset>
+}
+@*@using (Html.BeginForm("Manage", "Account")) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
@@ -24,4 +54,4 @@
         </ol>
         <input type="submit" value="Change password" />
     </fieldset>
-}
+}*@
