--- a/Health4life/Views/UserArea/ConnectHub.cshtml
+++ b/Health4life/Views/UserArea/ConnectHub.cshtml
@@ -10,8 +10,8 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6">
-        <h3>Create a new share key</h3>
+    <div class="col-md-6 well">
+        <h4>Create a new share key</h4>
         
         <form role="form">
             <div class="form-group">
@@ -20,7 +20,7 @@
                     <div class="btn-group" data-toggle="buttons">
                         <label class="btn btn-sm btn-info">
                             <input type="radio" name="valid-for" id="valid-for-gp">
-                            GP
+                            My GP
                         </label>
                         <label class="btn btn-sm btn-info">
                             <input type="radio" name="valid-for" id="valid-for-all">
@@ -49,23 +49,6 @@
             
             <button type="submit" class="btn btn-sm btn-primary">Create new share key</button>
         </form>
-
-        
-
-        @*<div class="input-group input-group-sm">
-            <label for="valid-for-gp">Valid for</label>
-            <div class="btn-group" data-toggle="buttons">
-                <label class="btn btn-info">
-                    <input type="radio" name="options" id="valid-for-gp">
-                    GP
-                </label>
-                <label class="btn btn-info">
-                    <input type="radio" name="options" id="valid-for-all">
-                    Anyone
-                </label>
-            </div>
-
-        </div>*@
     </div>
     <div class="col-md-6">
         <div class="panel panel-default">
