--- a/Health4life/Content/themes/amelia/variables.less
+++ b/Health4life/Content/themes/amelia/variables.less
@@ -635,3 +635,6 @@
 // Large screen / wide desktop
 @container-large-desktop:      ((1140px + @grid-gutter-width));
 @container-lg:                 @container-large-desktop;
+
+// Large screen / wide desktop
+@container-lg-desktop:        ((1140px + @grid-gutter-width));
