--- a/Health4life/Views/Account/Register.cshtml
+++ b/Health4life/Views/Account/Register.cshtml
@@ -8,6 +8,10 @@
     <h2>Create a new account.</h2>
 </hgroup>
 
+<div class="alert alert-success">
+    @ViewBag.Message
+</div>
+
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
