--- a/Health4life/Views/UserArea/Activities.cshtml
+++ b/Health4life/Views/UserArea/Activities.cshtml
@@ -1,11 +1,37 @@
-﻿@{
+﻿@model Health4life.ViewModel.ConnectHubVm
+
+@{
     ViewBag.Title = "Activities";
 }
 
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-md-12">
         <h2>@ViewBag.Title</h2>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque metus vulputate metus dictum, quis volutpat est imperdiet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis risus ligula, hendrerit nec luctus vitae, bibendum eget felis. Maecenas vulputate lectus eget mi mattis, vel blandit nulla rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-        <p><a class="btn btn-large btn-success" href="#" title="sign up">sign up</a></p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <h3>-</h3>
+        
+        
+    </div>
+    <div class="col-md-6">
+        <div class="list-group">
+            <div class="list-group-item">
+                <h4 class="list-group-item-heading">Activities summary</h4>
+            </div>
+            <a href="#" class="list-group-item">
+                <p><span class="label label-info">GP Advice</span></p>
+                <h4 class="list-group-item-heading">
+                    Walk 5 km
+                </h4>
+                <p>Walk 5 km on 25-10-2013</p>
+                
+            </a>
+            <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">Hide and seek</h4>
+                <p>Hide from teachers on 30-10-2013</p>
+            </a>
+        </div>
     </div>
 </div>
